[package]
name = "rdbm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
ron = "0.8"
serde = "1.0.136"
serde_derive = "1.0.136"
xdg-home = "1.0.0"
